# plugin_dev

./: .gitignore  AUTHENTIC_EMU_DSP_PACKAGE.md  BUILD.md  BUILD_QUICK_REFERENCE.md  BUILD_SYSTEM_INDEX.md  BUILD_SYSTEM_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_CHANGES_REFERENCE.md  DEEPSEEK_SETUP_GUIDE.md  DELIVERY_SUMMARY.txt  DEPLOYMENT_CHECKLIST.md  DSP_ANALYSIS.md  FIXES_APPLIED.md  INSTALL.md  LICENSE.txt  QUICKSTART.md  README.md  RUST_PORT_COMPLETE.md  RUST_PORT_STRATEGY.md
.claude/agents/: build-whisperer.md  code-architect.md  code-janitor.md  doc-sage.md  hot-path-guardian.md  juce-plugin-developer.md  test-pilot.md  ui-ux-stylist.md
.claude/skills/juce-plugin-dev/: Skill.md
.githooks/: pre-commit
.github/workflows/: build.yml
docs/: FIELD_DESIGN_TOKENS.json  FIELD_STYLE_GUIDE.md  FIGMA_SETUP_GUIDE.md
plugins/EngineField/: CMakeLists.txt
plugins/EngineField/Source/: FieldProcessor.cpp  FieldProcessor.h  PluginMain.cpp  parameters.h
plugins/EngineField/Source/components/: SpectrumComponent.cpp  XYPad.cpp
plugins/EngineField/Source/dsp/: EMUAuthenticTables.h  EnvelopeFollower.h  ZPlaneFilter.h
plugins/EngineField/Source/lookandfeel/: EngineLNF.cpp
plugins/EngineField/Source/ui/: FieldLookAndFeel.h  FieldWaveformUI.cpp  FieldWaveformUI.h  FieldWaveformUI.h.backup  FieldWaveformUI.h.original  VisualisationConfig.h
rust_port/: BUILD_TROUBLESHOOTING.md  Cargo.toml  README.md
rust_port/src/: lib.rs  params.rs  plugin.rs
rust_port/src/dsp/: biquad.rs  envelope.rs  filter.rs  mod.rs  shapes.rs  types.rs  zplane_math.rs
scripts/: pre-commit  verify-lock.py  verify_lock.py
sessions/: sessions-config.json
sessions/tasks/: h-fix-v1-0-1-hotfix.md  h-implement-harmonic-geometry-ui.md  h-implement-pixel-perfect-waveform-ui.md  h-refactor-ui-system.md
shared/ui/: AlienColors.h  AlienGlyphs.h  Colors.h  EngineLookAndFeel.h  MinimalControls.h  SpringValue.h  ZPlaneVisualizer.cpp  ZPlaneVisualizer.h
tools/: ui_probe.cpp
