[package]
name = "engine-field-rust"
version = "1.0.1"
edition = "2021"
authors = ["Engine:Field Port Team"]
description = "Rust port of Engine:Field Z-plane filter plugin"
license = "GPL-3.0-or-later"

[lib]
name = "engine_field"
crate-type = ["cdylib", "rlib"]

[dependencies]
# NIH-plug for plugin framework
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }

# Complex number support for bilinear transform
num-complex = "0.4"

# Fast math (optional SIMD)
wide = { version = "0.7", optional = true }

# Serialization for shapes
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
approx = "0.5"  # For floating-point comparisons in tests

[features]
default = []
simd = ["wide"]

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"  # RT-safe: no unwinding

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[[bench]]
name = "zplane_bench"
harness = false
